--- a/backend/package.json
+++ b/backend/package.json
@@ -9,19 +9,24 @@
     "dev": "nodemon src/server.js",
     "seed": "node src/scripts/seed.js"
   },
-  "keywords": ["express", "mongodb", "jwt", "auth"],
+  "keywords": [
+    "express",
+    "mongodb",
+    "jwt",
+    "auth"
+  ],
   "author": "",
   "license": "MIT",
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
+    "cors": "^2.8.6",
+    "dotenv": "^16.6.1",
+    "express": "^4.22.1",
     "express-async-errors": "^3.1.1",
-    "joi": "^17.11.0",
-    "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.0.3",
-    "morgan": "^1.10.0"
+    "joi": "^17.13.3",
+    "jsonwebtoken": "^9.0.3",
+    "mongoose": "^8.22.0",
+    "morgan": "^1.10.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
