--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -1,25 +1,26 @@
-# Dependencies
-node_modules/
-
-# Environment variables
-.env
-.env.*
-!.env.example
-
-# Build output
-dist/
-build/
-.vite/
-
 # Logs
+logs
 *.log
 npm-debug.log*
 yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
 
-# OS files
+node_modules
+dist
+dist-ssr
+*.local
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
 .DS_Store
-Thumbs.db
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
 
-# Editor settings
-.vscode/
-.idea/
+.env
